# nrf51822-env

./: Cargo.toml  memory.x
.cargo/: config
src/: lib.txt  main.rs
